# alecia-presentations

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ALECIA_DESIGN_SYSTEM.md  ALECIA_IMPLEMENTATION_ROADMAP.md  BLOCK_LIBRARY.md  BRANDING_AUDIT.md  BRAND_AUDIT.md  CLIENT_HANDOFF_ROADMAP.md  CODE_QUALITY_AUDIT.md  COOLIFY_SETUP.md  DEPLOY.md  DEPLOY_AUDIT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  FORKS_ANALYSIS.md  FORMER_PROJECTS_ANALYSIS.md  FRENCH_AUDIT.md  FRENCH_STRINGS_AUDIT.md  IMPORT_EXPORT_AUDIT.md  KEY PRINCIPLES FOR THE NEW VERSION.md  MASTER_AUDIT.md  PROGRESS.md  README.md  ROADMAP.md  ROADMAP_FINAL_MASTER.md  UX_AUDIT.md  alecia_components_spec.json  docker-compose.yml  index.html  nixpacks.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
attempt/: README.md  package.json
convex/: analytics.ts  chat.ts  chatActions.ts  commentActions.ts  comments.ts  exportAction.ts  exportPptx.ts  http.ts  importPptx.ts  presence.ts  projects.ts  router.ts  schema.ts  seed.ts  slides.ts  templates.ts
docs/: API.md  BRANDING.md  DEPLOYMENT.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
public/: manifest.json  sw.js
python-sidecar/: Dockerfile  pyproject.toml  requirements.txt
python-sidecar/app/: __init__.py  main.py
scripts/: deploy-coolify.sh  deploy-vercel.sh  setup.sh
server/: index.ts  package.json  tsconfig.json
src/: App.tsx  index.css  main.tsx  styled-jsx.d.ts  vite-env.d.ts
src_backup_20260331_145227/: App.tsx  index.css  (+2 more)
(+363 files in other folders)
