[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alecia-sidecar"
version = "0.1.0"
description = "Python sidecar for Alecia Presentation Builder - Docling PPTX import"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "python-multipart==0.0.9",
    "docling==2.0.0",
    "python-pptx==0.6.23",
    "pydantic==2.6.1",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "Pillow==10.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.4",
    "black==24.1.1",
    "ruff==0.2.1",
    "mypy==1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
